distro-info (0.19) UNRELEASED; urgency=medium

  [ Stefano Rivera ]
  * Migrate VCS to salsa.debian.org.

  [ Ondřej Nový ]
  * d/control: Remove ancient X-Python-Version field
  * d/control: Remove ancient X-Python3-Version field

 -- Stefano Rivera <stefanor@debian.org>  Sat, 24 Feb 2018 23:27:56 +0100

distro-info (0.18) unstable; urgency=medium

  * Update Python unittests to support pylint 1.8 (Closes: #889537)
  * Bump debhelper to version 11
  * Bump Standards-Version to 4.1.3 (no changes needed)
  * Update copyright year and format spec URL to https

 -- Benjamin Drung <bdrung@debian.org>  Sun, 04 Feb 2018 20:42:26 +0100

distro-info (0.17) unstable; urgency=medium

  * python: Strip trailing summary from pylint output
    (to fix build failure on Ubuntu 17.10)

 -- Benjamin Drung <bdrung@debian.org>  Fri, 21 Jul 2017 17:49:07 +0200

distro-info (0.16) unstable; urgency=medium

  * python: Introduce DistroRelease object and support returning it
    (steps to fix LP #1253208)
  * Add dh-python to build dependencies
  * Bump Standards-Version to 4.0.0 (no changes needed)

 -- Benjamin Drung <bdrung@debian.org>  Thu, 20 Jul 2017 12:08:34 +0200

distro-info (0.15) unstable; urgency=medium

  [ Mike Miller ]
  * debian-distro-info: Support oldstable with --alias. (Closes: #784284)

  [ Benjamin Drung ]
  * Fix flake8 and pylint issues found in Python code
  * Run flake8 and pylint checks on Python code in test suite
  * Python: Add DistroInfo.get_all() method
  * Bump Standard-Version to 3.9.8 (no changes required)
  * Use https for Vcs-Git and Vcs-Browser URLs

 -- Benjamin Drung <bdrung@debian.org>  Fri, 28 Apr 2017 19:45:36 +0200

distro-info (0.14) unstable; urgency=medium

  * Fix days in month calculation for leap years (Closes: #766142)
  * Bump Standards-Version to 3.9.6

 -- Benjamin Drung <bdrung@debian.org>  Tue, 21 Oct 2014 10:09:57 +0200

distro-info (0.13) unstable; urgency=medium

  [ Benjamin Drung ]