@@ -9,7 +9,7 @@
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-disable=invalid-name,locally-disabled,missing-docstring
+disable=bad-option-value,invalid-name,locally-disabled,missing-docstring,useless-object-inheritance
 
 
 [REPORTS]
