@@ -7,6 +7,15 @@ distro-info (0.19) UNRELEASED; urgency=medium
   * d/control: Remove ancient X-Python-Version field
   * d/control: Remove ancient X-Python3-Version field
 
+  [ Iain Lane ]
+  * Fix pylint issues (Closes: #909987):
+    + Allow useless-object-inheritance so we can stay PY2/3 bilingual.
+      - This is correctly an unknown option when linting python 2, so we need
+        to whitelist unknown overrides too.
+    + Refactor a useless if/return/elif... chain into a sequence of `if`s
+      instead.
+    + Use chained comparison x <= y <= z instead of x <= y and y <= z.
+
  -- Stefano Rivera <stefanor@debian.org>  Sat, 24 Feb 2018 23:27:56 +0100
 
 distro-info (0.18) unstable; urgency=medium
